// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Password/> Snapshot 1`] = `
<div>
  <h3>
    Password settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      Current Foris password
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          autocomplete="new-password"
          class="form-control "
          id="1"
          type="password"
          value=""
        />
        <div
          class="input-group-append"
        >
          <a
            class="input-group-text"
          >
            <i
              class="fa fa-eye"
            />
          </a>
        </div>
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <form>
    <h4>
      Foris password
    </h4>
    <p>
      Set your password for this administration interface.
    </p>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="2"
      >
        New Foris password
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="2"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <a
              class="input-group-text"
            >
              <i
                class="fa fa-eye"
              />
            </a>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Use same password for advanced administration (root)
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="3"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
    >
       
       
      Save
    </button>
  </form>
  <form>
    <h4>
      Advanced administration (root) password
    </h4>
    <p>
      
                            In order to access the advanced configuration options which are not available here, you must
                            set the root user's password. The advanced configuration options can be managed either 
                            through the 
      <a
        href="%s"
      >
        LuCI web interface
      </a>
       or via SSH.
                    
    </p>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="4"
      >
        New advanced administration password
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="4"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <a
              class="input-group-text"
            >
              <i
                class="fa fa-eye"
              />
            </a>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
    >
       
       
      Save
    </button>
  </form>
</div>
`;

exports[`<Password/> Snapshot: same password for root 1`] = `
<div>
  <h3>
    Password settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="5"
    >
      Current Foris password
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          autocomplete="new-password"
          class="form-control "
          id="5"
          type="password"
          value=""
        />
        <div
          class="input-group-append"
        >
          <a
            class="input-group-text"
          >
            <i
              class="fa fa-eye"
            />
          </a>
        </div>
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <form>
    <h4>
      Foris password
    </h4>
    <p>
      Set your password for this administration interface.
    </p>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="6"
      >
        New Foris password
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="6"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <a
              class="input-group-text"
            >
              <i
                class="fa fa-eye"
              />
            </a>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Use same password for advanced administration (root)
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="7"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
    >
       
       
      Save
    </button>
  </form>
</div>
`;
